# magda-agents

./: .gitignore  README.md  go.mod
docs/: MULTI_LANGUAGE.md
go/: go.mod
go/agents/arranger/: arranger_agent.go  arranger_agent_test.go  arranger_stream.go  two_stage_timing.go
go/agents/daw/: daw_agent.go  dsl_parser_functional.go
go/agents/plugin/: plugin_agent.go
go/llm/: gemini_provider.go  openai_provider.go  provider.go  provider_test.go
go/prompt/: loader.go
prompts/daw/: README.md  system_prompt.txt
python/: README.md  pyproject.toml
python/magda_agents/: __init__.py
python/magda_agents/agents/: __init__.py
python/magda_agents/agents/daw/: __init__.py  dsl_functional_examples.py  dsl_parser.py  dsl_parser_action_paradigm.py  dsl_parser_functional.py
python/magda_agents/interfaces/: __init__.py
python/magda_agents/llm/: __init__.py  cfg_config.py  magda_dsl_grammar.py  provider.py
typescript/: README.md  package.json  tsconfig.json
